--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
+
+androidExtensions {
+    experimental = true
+}
 
 android {
     compileSdkVersion 29
-    dataBinding.enabled = true
+    buildFeatures {
+        dataBinding = true
+    }
 
     defaultConfig {
         applicationId "ru.dellirium.mvvmapp"
